k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: worker-deployment
spec:
  replicas: 1                 # This is the scaling componenets which works on the request so, whenever request comes to us for hght load scaling this docker images gies better laod handling capacity
  selector:
    matchLabels:
      component: worker 
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: vedantdave77/docker-worker
